# verdict-room

./: .env.example  .gitignore  LICENSE  README.md  agent_config.yaml.example  pyproject.toml
docs/: BUSINESS.md  SUBMISSION.md  VIDEO_READ.md  VIDEO_SCRIPT.md  VIDEO_VOICEOVER.md  band_notes.md  index.html  report.html  sample_verdict.json
presentation/: deck.html
scripts/: make_report.py  smoke_band.py  smoke_llm.py
src/: __init__.py  run_all.py
src/agents/: __init__.py  arbiter.py  base.py  workers.py
src/common/: __init__.py  config.py  llm.py  logging.py
src/prompts/: advocate.md  arbiter.md  compliance.md  critic.md  researcher.md  scout.md  shared_protocol.md
src/tools/: web_research.py
tests/: test_arbiter.py  test_config.py  test_llm.py  test_web_research.py  test_workers.py
