[project]
name = "verdict-room"
version = "0.1.0"
description = "A Band-native multi-agent product due-diligence courtroom."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
